Auth Methods and Basic Config

--- a/public/PDFList.html
+++ b/public/PDFList.html
@@ -36,6 +36,7 @@
 			<script defer src="/__/firebase/init.js"></script>
 			<!-- calling user authentication functions -->
 			<script defer src="js/Users/isLogin.js"></script>
+
 		</head>
 		<body class="container" onload="validar()">
 			<header class="header row">
@@ -57,8 +58,8 @@
 										Horoscopo
 									</a>
 									<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink_01">
-										<li><a class="dropdown-item" href="PDFList.html">Lista de signos</a></li>
-										<li><a class="dropdown-item" href="addPDF.html">Agregar signo</a></li>
+										<li><a class="dropdown-item" href="lista.html">Lista de signos</a></li>
+										<li><a class="dropdown-item" href="agregar.html">Agregar signo</a></li>
 									</ul>
 								</li>
 								<li class="nav-item dropdown">
@@ -67,7 +68,7 @@
 										Usuarios
 									</a>
 									<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink_02">
-										<li><a class="dropdown-item" href="register.html">Registrar nuevo usuario</a></li>
+										<li><a class="dropdown-item" href="registrar.html">Registrar nuevo usuario</a></li>
 										<li><a class="dropdown-item" href="login.html">Autenticar usuario</a></li>
 										<li><a class="dropdown-item" onclick="salir()">Cerrar sesión</a></li>
 									</ul>
@@ -89,6 +90,5 @@
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 					integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 					crossorigin="anonymous"></script>
-					
 		</body>
 		</html>
