--- a/public/contact.html
+++ b/public/contact.html
@@ -21,12 +21,13 @@
 			<script src="https://kit.fontawesome.com/2c7bfef965.js" crossorigin="anonymous"></script>
 
 			<!-- Custom decoration -->
-			<title>Welcome to Firebase Hosting</title>
+			<title>Contact</title>
 			<link rel="stylesheet" href="css/style.css">
 
-			<!-- call menu and footer sections -->
+            <!-- call menu and footer sections -->
             <script src="sections/menu.js" defer></script>
             <script src="sections/footer.js" defer></script>
+
 
 			<!-- References Firebase libraries -->
 			<!-- update the version number as needed -->
@@ -38,23 +39,23 @@
 
 			<!-- initilized firebase object -->
 			<script defer src="/__/firebase/init.js"></script>
+
 		</head>
 		<body class="container">
 			<header class="header row">
-				<menu-component></menu-component>
+                <menu-component></menu-component>
 			</header>
 
 			<main class="row">
-				
+
 			</main>
 
 			<footer class="row">
-				<footer-component></footer-component>
+                <footer-component></footer-component>
 			</footer>
 			<!-- Option 1: Bootstrap Bundle with Popper -->
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 					integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 					crossorigin="anonymous"></script>
-					
 		</body>
 		</html>
