--- a/public/login.html
+++ b/public/login.html
@@ -40,7 +40,9 @@
 			<header class="header row">
 				<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 					<div class="container-fluid">
-						<a class="navbar-brand">Horoscopo</a>
+						<a class="navbar-brand" href="#">
+							<img src="images/logo/LWP_Logo.png" alt="" width="65%"  class="d-inline-block align-text-top">
+						</a>
 						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
 								aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
