Review Login & Signup

--- a/public/login.html
+++ b/public/login.html
@@ -102,7 +102,7 @@
 							</a>
 
 							<!--Button to Register instead of login-->                
-							<p style="text-align: center;">¿No tienes una cuenta? <a href="register.html"
+							<p style="text-align: center;">¿No tienes una cuenta? <a href="signup.html"
 								style="text-decoration: none;">Regístrate ahora!</a></p>
 						</form>
 						</div>
