--- a/public/signup.html
+++ b/public/signup.html
@@ -103,7 +103,7 @@
 						</section>
 						<hr>
 						<!--Button to continue-->
-						<a style="display: block;" href="AllModules.html">
+						<a style="display: block;" href="">
 								<button
 								id="btnInsUser" name="btnInsUser"  value="Insertar Usuario" style="border-color: #A0A0A0; color: white; background-color: #3E4AB8;" type="button"
 								class=" rounded-5 form-control btn  mb-3 "> Siguiente</button>
