--- a/public/addPDF.html
+++ b/public/addPDF.html
@@ -34,6 +34,7 @@
 <script defer src="/__/firebase/10.5.2/firebase-app-compat.js"></script>
 <script defer src="/__/firebase/10.5.2/firebase-auth-compat.js"></script>
 <script defer src="/__/firebase/10.5.2/firebase-database-compat.js"></script>
+<script defer src="/__/firebase/10.5.2/firebase-storage-compat.js"></script>
 <script defer src="/__/firebase/10.5.2/firebase-firestore-compat.js"></script>
 <!-- initilized firebase object -->
 <script defer src="/__/firebase/init.js"></script>
@@ -53,14 +54,16 @@
 		<div style="text-align: center;">
 			<input style="width: 300px;margin-left: 100px;" type="file" name="txtPDF" id="txtPDF">
 			<br> <br>
+            
 			<input type="button" name="btnLoad" id="btnLoad" value="Subir archivo" /> 
+            <script defer src="js/Users/uploadPDF.js"></script>
 
 		<!--	<button onclick="llenado" type="button" name="btnLoad" id="btnLoad"class="btn btn-primary">Subir archivo"</button>-->
 
 			 <!--<input  type="button" name="btnLoad" id="btnLoad" value="Subir archivo" /> -->
 		   </div>
 		   
-<script defer src="/__/firebase/init.js"></script>
+<!--<script defer src="/__/firebase/init.js"></script>-->
 
 
 <!--ACTIVAR EL LOGIN-->
