Google & Facebook testing

--- a/public/login.html
+++ b/public/login.html
@@ -72,13 +72,11 @@
 							<p style="font-size: 40px;" class="fw-bold pb-">Iniciar sesión en LWP</p>
 			
 							<!--Option Buttons to Log in-->
-							<a style="display: block;" href="https://accounts.google.com/login?hl=es">
-								<button style="border-color: #A0A0A0;" type="button" class="rounded-5 form-control btn  mb-3"><img
+								<button id="googleSign" style="border-color: #A0A0A0;" type="button" class="rounded-5 form-control btn  mb-3"><img
 									src="Images/google-icon.png" height="20"> Iniciar sesión con Google
 								</button>
-							</a>
-							<a style="display: block;" href="https://es-la.facebook.com/login/device-based/regular/login/">
-								<button style="border-color: #A0A0A0;" type="button"
+
+								<button id="facebookLogin" style="border-color: #A0A0A0;" type="button"
 								class="rounded-5 form-control btn btn-Facebook mb-3 bi bi-facebook ">  Iniciar sesión con
 								Facebook</button>
 			
