--- a/public/addComment.html
+++ b/public/addComment.html
@@ -20,6 +20,7 @@
 			<!-- Font awesome decoration -->
 			<script src="https://kit.fontawesome.com/2c7bfef965.js" crossorigin="anonymous"></script>
 
+
 			<!-- Custom decoration -->
 			<title>Welcome to Firebase Hosting</title>
 			<link rel="stylesheet" href="css/style.css">
@@ -38,6 +39,7 @@
 
 			<!-- initilized firebase object -->
 			<script defer src="/__/firebase/init.js"></script>
+			<script defer src="../js/Users/isLogin.js"></script>
 		</head>
 		<body class="container" onload="validar()">
 			<header class="header row">
@@ -52,7 +54,7 @@
                     <label for="comment">Comentario:</label><br>
                     <textarea id="comment" name="comment" rows="4" cols="50"></textarea><br><br>
             
-                    <input type="submit" value="Enviar">
+                    <input id="sendComment" type="submit" value="Enviar">
                 </form>
 			</main>
 
@@ -63,6 +65,7 @@
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 					integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 					crossorigin="anonymous"></script>
+			<script defer src="js/comments/addComment.js"></script>
 					
 		</body>
 		</html>
