--- a/public/addPDF.html
+++ b/public/addPDF.html
@@ -27,6 +27,7 @@
 
 <!-- call menu and footer sections -->
 <script src="sections/menu.js" defer></script>
+<script src="sections/footer.js" defer></script>
 
 <!-- References Firebase libraries -->
 <!-- update the version number as needed -->
@@ -56,7 +57,7 @@
 			<br> <br>
             
 			<input type="button" name="btnLoad" id="btnLoad" value="Subir archivo" /> 
-
+<script defer src="js/Users/uploadPDF.js"></script>
     <!--	<button onclick="llenado" type="button" name="btnLoad" id="btnLoad"class="btn btn-primary">Subir archivo"</button>-->
 			 <!--<input  type="button" name="btnLoad" id="btnLoad" value="Subir archivo" /> -->
 		   </div>
@@ -74,5 +75,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+  <footer>  <footer-component></footer-component></footer>
+
+      
 </body>
 </html>
