Verify Log Session & Exit Button

--- a/public/AllModules.html
+++ b/public/AllModules.html
@@ -14,8 +14,9 @@
 	<script src="sections/menu.js" defer></script>
 	
 	<script src="sections/footer.js" defer></script>
+    <script defer src="js/Users/isLogin.js"></script>
 </head>
-<body>
+<body class="container" onload="validar()">
     <body>
       <header class="border-bottom p-3 bg-body-tertiary rounded">
 		<menu-component></menu-component>
