--- a/public/ModulePDF.html
+++ b/public/ModulePDF.html
@@ -35,10 +35,11 @@
 
     <!-- initilized firebase object -->
     <script defer src="/__/firebase/init.js"></script>
+    <script defer src="js/Users/isLogin.js"></script>
 
    
 </head>
-<body class="">
+<body class="container" onload="validar()">
     <header class="header row">
         <menu-component></menu-component>
     </header>
