--- a/public/addPDF.html
+++ b/public/addPDF.html
@@ -39,8 +39,9 @@
 <script defer src="/__/firebase/10.5.2/firebase-firestore-compat.js"></script>
 <!-- initilized firebase object -->
 <script defer src="/__/firebase/init.js"></script>
+<script defer src="js/Users/isLogin.js"></script>
 </head>
-<body class="container">
+<body class="container" onload="validar()">
 <header class="header row">
     <menu-component></menu-component>
 </header>
