--- a/public/login.html
+++ b/public/login.html
@@ -57,12 +57,16 @@
 					<div class="col col-7 ">
 					<div class="card rounded-4"
 						style=" margin: auto; margin-top: 5%; padding-left: 15%; padding-right: 15%; margin-left: 9%; margin-right: 9%;">
+					<button style="border: none; background: none; position: absolute; top: 10px; right: 20px;"
+						onclick="window.location.href='index.html'">
+					<i class="bi bi-x-lg" style="font-size: 1.5rem;"></i>
+				</button>
 						<!--Card Body-->
 						<div class="card-body">
 						<form class="BG">
 							<div class="mb-3 ">
 							<!--Img of the companny-->
-																<button style="background-color: white; border: none;" class="buttonX" type="button">
+							<button style="background-color: white; border: none;" class="buttonX" type="button">
 			
 								</button>
 
