--- a/public/signup.html
+++ b/public/signup.html
@@ -55,7 +55,11 @@
 				<div class="col col-7">
 				<div class="card rounded-4"
 					style=" margin: auto; margin-top: 2%; margin-bottom: 2%; padding-left: 10%; padding-right: 10%; margin-left: 9%; margin-right: 9%;">
-				<!--Body of the -->
+					<button style="border: none; background: none; position: absolute; top: 10px; right: 20px;"
+					onclick="window.location.href='index.html'">
+				<i class="bi bi-x-lg" style="font-size: 1.5rem;"></i>
+			</button>
+					<!--Body of the -->
 					<div class="card-body">
 					<form class="BG">
 						<div class="mb-3 ">
