Styles to Info Pages

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,9 @@
 			</header>
 
 			<main class="row">
-				
+				<div class="indexPage">
+					<h2>Pagina de Inicio de Learn While Playing</h2>
+				</div>
 			</main>
 
 			<footer class="row">
