--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -22,7 +22,7 @@
 
 			<!-- Custom decoration -->
 			<title>Aboutus</title>
-			<link rel="stylesheet" href="css/style.css">
+			<link rel="stylesheet" href="/public/css/AboutUs.css">
 
             <!-- call menu and footer sections -->
             <script src="sections/menu.js" defer></script>
@@ -44,10 +44,178 @@
 		<body class="container">
 			<header class="header row">
                 <menu-component></menu-component>
+				<div style="text-align: center; margin-top: 15%; " >
+					<img class=" mb-4 mt-2 " src="/public/images/ABOUTUS.png" width="600" height="70" />
+				</div>
 			</header>
 
 			<main class="row">
-
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-2"></div>
+						<!--Concrete Information of us-->
+						<div class="col-8">
+							<p style="text-align: center; font-size: 30px;">¿Quienes somos?</p>
+							<p style="text-align: center;">Nosotros somos una empresa dedicada a ayudar a niños pequeños con el
+								aprendizaje del idioma español e inglés.
+								Nuestro enfoque está en proporcionar recursos y herramientas educativas que les permitan a los niños
+								desarrollar
+								habilidades lingüísticas en ambos idiomas de manera efectiva. Contamos con una pagina interactiva,
+								llena de material
+								autodidáctico el cual ayude
+								a los estudiantes de primer y segundo ingreso, desarrollar sus habilidades lingüísticas.</p>
+						</div>
+						<div class="col-2 "></div>
+					</div>
+					<div class="mb-4 "></div>
+					<!--Mision Section of about us-->
+					<section>
+						<div class="container-fluid"></div>
+						<div style="background-color:	#F4F4F4" class="row">
+							<div class="col-2"></div>
+							<div class="col-8">
+								<div class="row">
+									<div style="text-align: center;" class="col-6">
+										<img class="logoImg mb-4 mt-2" src="/public/images/aboutUs1.png" width="250" height="240" />
+									</div>
+									<div class="col-6">
+										<p style="font-size: 25px;">Misión</p>
+										<p style="text-align: justify;">En nuestra empresa, nos enfocamos en brindar recursos y
+											herramientas educativas
+											innovadoras que permitan a los niños pequeños desarrollar habilidades lingüísticas
+											en español e inglés de manera efectiva y divertida. Nos esforzamos por crear un
+											ambiente de aprendizaje seguro y estimulante, donde los niños puedan explorar y
+											aprender a su propio ritmo. Nuestra misión es apoyar el crecimiento y el desarrollo
+											de los niños en un entorno multicultural y prepararlos para enfrentar los desafíos
+											del mundo globalizado de hoy día.</p>
+									</div>
+			
+								</div>
+			
+							</div>
+							<div class="col-2 "></div>
+						</div>
+						<div class="mb-4 "></div>
+			
+					</section>
+					<!--Vision section about us-->
+					<section>
+						<div class="row">
+							<div class="col-2"></div>
+							<div class="col-8">
+								<div class="row">
+									<div class="col-6">
+										<p style="font-size: 25px;">Vision</p>
+										<p style="text-align: justify;">Ser una institución líder a nivel nacional, brindando una
+											forma efectiva
+											y transparente en la enseñanza de la lingüística del idioma español e inglés a
+											estudiantes de primer
+											ingreso escolar, bridando diferentes meteorologías y prácticas de aprendizaje las cuales
+											desarrollaran
+											de manera eficiente las habilidades cognitivas de los estudiantes. </p>
+									</div>
+									<div style="text-align: center;" class="col-6">
+										<img class="logoImg mb-4 mt-2" src="/public/images/aboutUs2.png" width="250" height="240" />
+			
+									</div>
+			
+								</div>
+			
+							</div>
+							<div class="col-2"></div>
+						</div>
+			
+					</section>
+					<div class="mb-2 "></div>
+					<!--Section mentioning some clients feed back-->
+					<section>
+						<div style="background-color:	#F4F4F4" class="row">
+							<div class="row">
+								<div class="col-2"></div>
+								<div class="col-8">
+									<p style="text-align: center; font-size: 25px;" class="mt-3 mb-4">Que dicen nuestros clientes
+									</p>
+									<div class="row">
+										<div class="col-6">
+											<div class="row">
+												<div style="background-color:  #AE9FC4 " class="col-11 rounded-4">
+													<div class="row">
+														<div class="col-4 ">
+															<img style="margin-top: 20px;" class="logoImg mb-4"
+																src="/public/images/adele.png" width="100" height="100" />
+														</div>
+														<div style="color: aliceblue;" class="col-8">
+															<p style="font-size: 18px;" class="mt-3 mb-1"><strong>Adele
+																	Adkins</strong></p>
+															<p class="mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+																Vitae, sapiente!</p>
+														</div>
+			
+													</div>
+			
+			
+												</div>
+												<div class="col-1"></div>
+											</div>
+										</div>
+										<div class="col-6">
+											<div class="row">
+												<div class="col-1"></div>
+												<div style="background-color:  aquamarine;" class="col-11 rounded-4">
+													<div class="row">
+														<div class="col-4">
+															<img style="margin-top: 20px;" class="logoImg mb-4"
+																src="/LWP/Images/jenni.png" width="100" height="100" />
+														</div>
+														<div class="col-8">
+															<p style="font-size: 18px;" class="mt-3 mb-1"><strong>Jenni
+																	Rivera</strong></p>
+															<p class="mb-2 ">Lorem ipsum dolor sit amet consectetur adipisicing
+																elit. Vitae, sapiente!</p>
+			
+														</div>
+			
+													</div>
+												</div>
+			
+											</div>
+										</div>
+			
+									</div>
+								</div>
+								<div class="col-2"></div>
+							</div>
+							<div class="mb-5 "></div>
+			
+					</section>
+					<!--Propaganda for our payment plans-->
+					<section>
+						<div class="row">
+							<div class="col-2"></div>
+							<div class="col-8" style="padding-top: 40px;">
+								<div class="row">
+									<div style="text-align: center; " class="col-6">
+										<p style="font-size: 20px;">¿Aún no tienes cuenta?</p>    
+										<a href="/LWP/InfoPage/signUp.html" style ="color: #F4F4F4; background-color: #3E4AB8
+										;" class="btn rounded-4 w-50 "><strong>Conoce más</strong></a>
+									</div>
+									<div style="text-align: center; " class="col-6">
+										<p style="font-size: 20px;">Planes de Pago</p>
+										<p style="text-align: justify;">
+										Nuestra empresa cuenta con planes de pago accesibles para usted en donde según lo que 
+										usted necesite se le brindará, cada plan tiene un acceso adquirido a: modulos de aprendizaje personalizados,
+										libros de calidad y recursos para mejorar la enseñanza del estudiante según el plan seleccionado con su cuenta.
+										</p>
+									  
+									</div>
+			
+								</div>
+			
+							</div>
+							<div class="col-2"></div>
+						</div>
+			
+					</section>
 			</main>
 
 			<footer class="row">
