--- a/public/content.html
+++ b/public/content.html
@@ -22,7 +22,7 @@
 
 			<!-- Custom decoration -->
 			<title>Welcome to Firebase Hosting</title>
-			<link rel="stylesheet" href="css/style.css">
+			<link rel="stylesheet" href="css/contenido.css">
 
 			<!-- call menu and footer sections -->
             <script src="sections/menu.js" defer></script>
@@ -30,15 +30,15 @@
 
 			<!-- References Firebase libraries -->
 			<!-- update the version number as needed -->
-            <!--
+            
 			<script defer src="/__/firebase/9.17.2/firebase-app-compat.js"></script>
 			<script defer src="/__/firebase/9.17.2/firebase-auth-compat.js"></script>
 			<script defer src="/__/firebase/9.17.2/firebase-database-compat.js"></script>
 			<script defer src="/__/firebase/9.17.2/firebase-firestore-compat.js"></script>
-			<script defer src="/__/firebase/9.17.2/firebase-storage-compat.js"></script>-->
+			<script defer src="/__/firebase/9.17.2/firebase-storage-compat.js"></script>
 
 			<!-- initilized firebase object -->
-			<!--<script defer src="/__/firebase/init.js"></script>-->
+			<script defer src="/__/firebase/init.js"></script>
 		</head>
 		<body class="container">
 			<header class="header row">
