--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -11,11 +11,11 @@
 			<meta http-equiv="cache-control" content="no-cache">
 			<meta value="no-cache, no-store, must-revalidate" name="no-chache">
 
-			<!-- Bootstrap CSS -->
-			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-				  rel="stylesheet"
-				  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-				  crossorigin="anonymous">
+		<!-- Bootstrap CSS -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+				rel="stylesheet"
+				integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+				crossorigin="anonymous">
 
 			<!-- Font awesome decoration -->
 			<script src="https://kit.fontawesome.com/2c7bfef965.js" crossorigin="anonymous"></script>
@@ -45,7 +45,7 @@
 			<header class="header row">
                 <menu-component></menu-component>
 				<div style="text-align: center; margin-top: 15%; " >
-					<img class=" mb-4 mt-2 " src="/public/images/ABOUTUS.png" width="600" height="70" />
+					<img class=" mb-4 mt-2 " src="/images/ABOUTUS.png" width="600" height="70" />
 				</div>
 			</header>
 
@@ -76,7 +76,7 @@
 							<div class="col-8">
 								<div class="row">
 									<div style="text-align: center;" class="col-6">
-										<img class="logoImg mb-4 mt-2" src="/public/images/aboutUs1.png" width="250" height="240" />
+										<img class="logoImg mb-4 mt-2" src="/images/aboutUs1.png" width="250" height="240" />
 									</div>
 									<div class="col-6">
 										<p style="font-size: 25px;">Misión</p>
@@ -115,7 +115,7 @@
 											de manera eficiente las habilidades cognitivas de los estudiantes. </p>
 									</div>
 									<div style="text-align: center;" class="col-6">
-										<img class="logoImg mb-4 mt-2" src="/public/images/aboutUs2.png" width="250" height="240" />
+										<img class="logoImg mb-4 mt-2" src="/images/aboutUs2.png" width="250" height="240" />
 			
 									</div>
 			
@@ -142,7 +142,7 @@
 													<div class="row">
 														<div class="col-4 ">
 															<img style="margin-top: 20px;" class="logoImg mb-4"
-																src="/public/images/adele.png" width="100" height="100" />
+																src="/images/adele.png" width="100" height="100" />
 														</div>
 														<div style="color: aliceblue;" class="col-8">
 															<p style="font-size: 18px;" class="mt-3 mb-1"><strong>Adele
@@ -165,7 +165,7 @@
 													<div class="row">
 														<div class="col-4">
 															<img style="margin-top: 20px;" class="logoImg mb-4"
-																src="/LWP/Images/jenni.png" width="100" height="100" />
+																src="/Images/jenni.png" width="100" height="100" />
 														</div>
 														<div class="col-8">
 															<p style="font-size: 18px;" class="mt-3 mb-1"><strong>Jenni
@@ -196,7 +196,7 @@
 								<div class="row">
 									<div style="text-align: center; " class="col-6">
 										<p style="font-size: 20px;">¿Aún no tienes cuenta?</p>    
-										<a href="/LWP/InfoPage/signUp.html" style ="color: #F4F4F4; background-color: #3E4AB8
+										<a href="/InfoPage/signUp.html" style ="color: #F4F4F4; background-color: #3E4AB8
 										;" class="btn rounded-4 w-50 "><strong>Conoce más</strong></a>
 									</div>
 									<div style="text-align: center; " class="col-6">
