Authentication with google and Facebook

--- a/public/AllModules.html
+++ b/public/AllModules.html
@@ -93,7 +93,7 @@
                                             <p>Gratuito</p></br>
                                             <p>Diversidad de prácticas creadas en el lenguaje inglés, las cuales ayudaran a
                                                 los niños para tener una comprensión básica en el idioma</p>
-                                            <a style="color: #ebf2f2; background-color: #3E4AB8;" href="/LWP/Modules/english1.html"
+                                            <a style="color: #ebf2f2; background-color: #3E4AB8;" href="/public/ModulePDF.html"
                                                 class="btn mt-5 rounded-5">Iniciar modulo</a>
     
                                         </div>
